Bug 244151 - Renaming image files causes them to vanish from an album
Summary: Renaming image files causes them to vanish from an album
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: AdvancedRename-file (other bugs)
Version First Reported In: 1.2.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-10 19:55 UTC by usedonlytosignup
Modified: 2022-01-31 21:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description usedonlytosignup 2010-07-10 19:55:14 UTC
Version:           1.2.0 (using KDE 4.4.4) 
OS:                Linux

If you rename an image file and don't put the .ext back on the end, it will vanish from the album.

Reproducible: Always

Steps to Reproduce:
See details

Actual Results:  
See details

Expected Results:  
See details

You should change the renamer so that it works like the one in dolphin, that is, it highlights the part of the name to rename before the .ext so you CAN change .ext if you really mean it but if you do the natural thing your photo's won't vanish.
Comment 1 caulier.gilles 2010-07-11 10:22:50 UTC
Please try again with last digiKam 1.3.0

Gilles Caulier
Comment 2 Andi Clemens 2010-07-11 11:09:10 UTC
SVN commit 1148606 by aclemens:

When in singleFileMode, select the full base name in the AdvancedRenameInput,
for quickly changing the current file name. Avoid selecting the file extension.

BUG:244151

 M  +1 -0      advancedrenamedialog.cpp  
 M  +8 -0      advancedrenameinput.cpp  
 M  +1 -0      advancedrenameinput.h  
 M  +5 -0      advancedrenamewidget.cpp  
 M  +5 -0      advancedrenamewidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1148606