When in singleFileMode, select the full base name in the AdvancedRenameInput, for quickly changing the current file name. Avoid selecting the file extension.

BUG:244151

svn path=/trunk/extragear/graphics/digikam/; revision=1148606