utilities/advancedrename/advancedrenameinput.cpp
@@ -377,6 +377,14 @@ void AdvancedRenameInput::slotSetFocus()
     d->lineEdit->ensureCursorVisible();
 }
 
+void AdvancedRenameInput::slotHighlightLineEdit(const QString& word)
+{
+    QTextCursor cursor = d->lineEdit->textCursor();
+    cursor.movePosition(QTextCursor::StartOfLine, QTextCursor::MoveAnchor);
+    d->lineEdit->setTextCursor(cursor);
+    d->lineEdit->find(word, QTextDocument::FindCaseSensitively);
+}
+
 void AdvancedRenameInput::enableHighlighter(bool enable)
 {
     if (d->highlighter)
